fix scrollbar bug on profile

--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -564,7 +564,7 @@ select option{
     }
 }
 .profile-banner{
-    overflow: auto;
+    overflow: hidden;
 }
 .profile-picture{
     float: left;
